--- a/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
@@ -1,16 +1,15 @@
-    <div class="create-ac-wrapper">
-<link rel="stylesheet" href="./wp-content/themes/walnut/walnut_student_assets/dev/css/bootstrap.min.css">
-<link rel="stylesheet" href="./wp-content/themes/walnut/walnut_student_assets/dev/css/style.css">
-<link rel="stylesheet" href="./wp-content/themes/walnut/walnut_student_assets/dev/css/font-awesome.min.css">
+<link rel="stylesheet" href="/wp-content/themes/walnut/walnut_student_assets/dev/css/bootstrap.min.css">
+<link rel="stylesheet" href="/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css">
+<link rel="stylesheet" href="/wp-content/themes/walnut/walnut_student_assets/dev/css/font-awesome.min.css">
 
 <header>
     <nav class="navbar navbar-default wallnut-nav">
         <div class="container-fluid signin-header">
             <div class="logo">
-                <img src="./wp-content/themes/walnut/walnut_student_assets/dev/images/walnut-logo.png" class="img-responsive center-block" alt="">
+                <img src="/wp-content/themes/walnut/walnut_student_assets/dev/images/walnut-logo.png" class="img-responsive center-block" alt="">
             </div>
             <div class="slogan">
-                <img src="./wp-content/themes/walnut/walnut_student_assets/dev/images/walnut-tagline.png" class="img-responsive center-block" alt="">
+                <img src="/wp-content/themes/walnut/walnut_student_assets/dev/images/walnut-tagline.png" class="img-responsive center-block" alt="">
             </div>
         </div>
     </nav>
@@ -25,20 +24,28 @@
                             <h4>Login to your account</h4>
                             <hr>
                             <div class="wrapper">
-                            <div class="school-username">
-                                <h5>Username :</h5>
-                                <div class="mat-holder">
-                                    <label for="username" class="mat-label">Username</label>
-                                    <input type="text" name="txtusername" id="txtusername"  class="mat-input" required>
+                                <div class="login-logo">
+                                    <div class="profile-pic">
+                                        <img src="/wp-content/themes/walnut/walnut_student_assets/dev/images/shivane.png" alt="" class="img-responsive center-block" width="100">
+                                    </div>  
                                 </div>
-                            </div>
-                            <div class="school-password">
-                                <h5>Password :</h5>
-                                <div class="mat-holder">
-                                    <label for="password" class="mat-label">Password</label>
-                                    <input name="txtpassword" id="txtpassword"  type="password" class="mat-input" required>
+                                <div class="login-details">
+                                    <div class="credential school-username">
+                                        <h5>Username :</h5>
+                                        <div class="mat-holder">
+                                            <label for="username" class="mat-label">Username</label>
+                                            <input type="text" name="txtusername" id="txtusername"  class="mat-input" required>
+                                        </div>
+                                    </div>
+                                    <div class="credential school-password">
+                                        <h5>Password :</h5>
+                                        <div class="mat-holder">
+                                            <label for="password" class="mat-label">Password</label>
+                                            <input name="txtpassword" id="txtpassword"  type="password" class="mat-input" required>
+                                        </div>
+                                    </div>  
                                 </div>
-                            </div>
+
                             </div>
                             <div class="update">
                             <a class="reset-password">Trouble logging in?</a>
@@ -61,4 +68,3 @@
     padding-top:0px;
 }
 </style>
-<!--kapil-->
