--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
@@ -1,4 +1,4 @@
- //  _____                _   _             ____        _     
+//  _____                _   _             ____        _     
  // |  __ \              | | (_)           / __ \      (_)    
  // | |__) | __ __ _  ___| |_ _  ___ ___  | |  | |_   _ _ ____
  // |  ___/ '__/ _` |/ __| __| |/ __/ _ \ | |  | | | | | |_  /
@@ -896,3 +896,11 @@
         }
     }
  }
+
+
+.errorSubmitMsg{
+    margin-bottom: 15px;
+    text-align: center;
+    padding: 5px;
+    font-size: 1.3em;
+}
