error text aligned to left.

--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -3519,7 +3519,7 @@ lesshat-selector {
 }
 .errorSubmitMsg {
   margin-bottom: 15px;
-  text-align: center;
+  text-align: left;
   padding: 5px;
   font-size: 1.3em;
 }
