--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -36,6 +36,33 @@
             {{#hint}}
                 <label class="small-text text-grey db">Viewed Hint: <span class="bold">{{hint_viewed}}<span></label>
             {{/hint}}
+
+            {{#comment}}
+            <label class="small-text text-grey db comment-label comment-active">Comment: <span class="bold">{{&comment}}</span>{{#comment_modal}}<span class="more" data-toggle="modal" data-target="#comment-modal{{commentId}}">...More</span>{{/comment_modal}}
+                <!-- <div class="full-comment">{{comment}}</div> -->
+
+                <!-- Modal -->
+                <div class="modal fade comment-modal" id="comment-modal{{commentId}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Comments</h4>
+                      </div>
+                      <div class="modal-body">
+                        {{&comment}}
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default cancel" data-dismiss="modal">Cancel</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+
+            </label>
+          
+           {{/comment}}
         </div>
     {{/responseStatus}}
 </div>
