comment image modal code modified

--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
@@ -196,6 +196,18 @@
 					    .more{
 					    	display: none;
 					    }
+					    // .bold{
+					    // 	img{
+					    // 		display: none;
+					    // 	}
+					    // }
+					    .comment-modal{
+					    	.modal-body{
+					    		margin: 15px 0;
+    							height: 150px;
+    							overflow: auto;
+    						}
+					    }
 					    &.comment-active{
 					    	.full-comment{
 					    		&.is-shown{
