--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -112,9 +112,9 @@
             
 
             {{#comment}}
-            <label class="small-text text-grey db comment-label comment-active">Comment: {{^view_modal}}<span class="bold">{{&comment}}</span>{{#comment_modal}}<span class="more" data-toggle="modal" data-target="#comment-modal{{commentId}}">...More</span>{{/comment_modal}}{{/view_modal}}
+            <label class="small-text text-grey db comment-label comment-active">Comment: {{^view_modal}}<span class="bold">{{&comment}}</span>{{#comment_modal}}<span class="more" data-toggle="modal" data-target="#comment-modal{{commentIdAdmin}}">...More</span>{{/comment_modal}}{{/view_modal}}
 
-            {{#view_modal}}<span class="bold">&nbsp;</span><span class="more" data-toggle="modal" data-target="#comment-modal{{commentId}}">View Comment</span>{{/view_modal}}
+            {{#view_modal}}<span class="bold">&nbsp;</span><span class="more" data-toggle="modal" data-target="#comment-modal{{commentIdAdmin}}">View Comment</span>{{/view_modal}}
 
                 <!-- <div class="full-comment">{{comment}}</div> -->
 
