--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
@@ -229,6 +229,13 @@
 							    // @media screen and (max-width: 1400px) {
 							    // 	right: -18px;
 							    // }
+							    &.img-more{
+							    	position: relative;
+								    text-align: right;
+								    display: inline-block;
+								    background-color: transparent;
+								    box-shadow: none;
+							    }
 						    }					    	
 					    }
 	             	}	             	
