--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
@@ -835,3 +835,31 @@ nav {
         }
     }
 }
+
+
+.comment-modal{
+    &.modal{
+        .modal-header{
+            background: @dashboard-color;
+        }
+        .modal-body{
+            background-color: transparent;
+        }
+        .modal-footer{
+            button{
+                color: @color-white;
+                border: 0;
+                color: #fff;
+                padding: 8px;
+                width: 20%;
+                text-transform: uppercase;
+                .box-shadow(0 2px 5px 0 rgba(0, 0, 0, 0.2));
+                &.cancel{
+                    background: @button-1-danger;
+                }
+            }
+        }
+    }    
+}
+
+
