--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -50,7 +50,7 @@
                     <div class="modal-content">
                       <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">Comments</h4>
+                        <h4 class="modal-title" id="myModalLabel">Comment</h4>
                       </div>
                       <div class="modal-body">
                         {{&comment}}
@@ -114,7 +114,7 @@
             {{#comment}}
             <label class="small-text text-grey db comment-label comment-active">Comment: {{^view_modal}}<span class="bold">{{&comment}}</span>{{#comment_modal}}<span class="more" data-toggle="modal" data-target="#comment-modal{{commentIdAdmin}}">...More</span>{{/comment_modal}}{{/view_modal}}
 
-            {{#view_modal}}<span class="bold">&nbsp;</span><span class="more" data-toggle="modal" data-target="#comment-modal{{commentIdAdmin}}">View Comment</span>{{/view_modal}}
+            {{#view_modal}}<span class="bold">This comment has image </span><span class="more img-more" data-toggle="modal" data-target="#comment-modal{{commentId}}">Click here</span>{{/view_modal}}
 
                 <!-- <div class="full-comment">{{comment}}</div> -->
 
@@ -124,7 +124,7 @@
                     <div class="modal-content">
                       <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">Comments</h4>
+                        <h4 class="modal-title" id="myModalLabel">Comment</h4>
                       </div>
                       <div class="modal-body">
                         {{&comment}}
