comment popup text change

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -114,7 +114,7 @@
             {{#comment}}
             <label class="small-text text-grey db comment-label comment-active">Comment: {{^view_modal}}<span class="bold">{{&comment}}</span>{{#comment_modal}}<span class="more" data-toggle="modal" data-target="#comment-modal{{commentIdAdmin}}">...More</span>{{/comment_modal}}{{/view_modal}}
 
-            {{#view_modal}}<span class="bold">This comment has image </span><span class="more img-more" data-toggle="modal" data-target="#comment-modal{{commentId}}">Click here</span>{{/view_modal}}
+            {{#view_modal}}<span class="bold">This comment has image </span><span class="more img-more" data-toggle="modal" data-target="#comment-modal{{commentIdAdmin}}">Click here</span>{{/view_modal}}
 
                 <!-- <div class="full-comment">{{comment}}</div> -->
 
