--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
@@ -829,6 +829,11 @@
         .data{
             line-height: 1.5;
             margin-left: 15px;
+            &:after{
+                content: '';
+                clear: both;
+                display: table;
+            }
         }
     }
     &__hint{
