school admin replay quiz comment modal fixed

--- a/wp-content/themes/walnut/walnut/dev/css/less/admin.less
+++ b/wp-content/themes/walnut/walnut/dev/css/less/admin.less
@@ -7,7 +7,7 @@
 
 
 #content-pieces-table{
-   table-layout: fixed;
+  table-layout: fixed;
   tr{
     th{
       vertical-align: middle;
@@ -191,20 +191,20 @@
 
 
 .all-d-best,.direction,.submit2,.quiz-stats,.new-design{
-   display: none;
+  display: none;
 }
 
 .admin-side{
-   display: block;
+  display: block;
 }
 
 #question-display-region > div .container-grey,.quiz-info{
-   text-align: center;
+  text-align: center;
 }
 
 
 #question-display-region > div #skip-question{
-   padding: 10px 18px;
+  padding: 10px 18px;
 }
 
 
@@ -217,11 +217,11 @@
 /*Date-Time picker fix */
 
 .contentSelect{
-   overflow: inherit !important;
+  overflow: inherit !important;
 }
 
 .contentSelect .tab-content{
-   overflow: inherit;
+  overflow: inherit;
 }    
 
 .flexContainer{
@@ -234,15 +234,15 @@
 }
 
 .flexContainer .flexChild .input-append{
-   /*display: flex;*/
+  /*display: flex;*/
 }
 
 .flexContainer .flexChild .input-append > input[type="text"]{
-   width: 80%;
+  width: 80%;
 }
 
 .flexContainer .flexChild .input-append .dropdown-menu{
-   top: 40px !important;
+  top: 40px !important;
     height: 260px;
     text-align: center;
 }
@@ -256,35 +256,35 @@
 
 
 .table-tools-actions .select2-container.textbook-filter{
-   min-width: 160px;
+  min-width: 160px;
     width: inherit;
 }
 
 
 .table-tools-actions .select2-container.textbook-filter .select2-choices{
-   max-width: 520px;
+  max-width: 520px;
     overflow-x: auto;
     white-space: nowrap;
-   display: -webkit-box;
-   display: -webkit-flex;
-   display: -ms-flexbox;
-   display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 
 .table-tools-actions .select2-container.textbook-filter .select2-search-choice{
-   display: inline-block;
+  display: inline-block;
     float: none;
     /*width: 123px;*/
 }
 
 .table-tools-actions .select2-container.textbook-filter .select2-choices .select2-search-field{
-   display: inline-block;
+  display: inline-block;
     float: none;
 }
 
 .table-tools-actions .select2-container.textbook-filter .select2-choices .select2-search-field input[type="text"]{
-   width: 153px;
+  width: 153px;
     color: #000 !important;
     font-weight: 400;
     text-transform: capitalize;
@@ -302,17 +302,17 @@
 */
 
 #dialog-region .bootstrap-datetimepicker-widget .table-condensed{
-   width: 100%;
-   text-align: center;
-   cursor: pointer;
+  width: 100%;
+  text-align: center;
+  cursor: pointer;
 }
 
 #dialog-region .bootstrap-datetimepicker-widget{
-   cursor: pointer;
+  cursor: pointer;
 }
 
 #dialog-region .bootstrap-datetimepicker-widget .timepicker .btn-primary{
-   color: #ffffff;
+  color: #ffffff;
     background-color: #259b24; 
     border-color: #259b24;
 }
@@ -499,6 +499,20 @@
         box-shadow: -13px 8px 5px 6px rgba(229, 233, 236, 0.61);
         background-color: #e5e9ec;
     }
+    .img-more{
+      position: relative;
+    }
+    .comment-modal{
+        .modal-body{
+          height: 150px;
+          overflow: auto;
+          &:after{
+            content: '';
+            display: table;
+            clear: both;
+          }
+        }
+    }
 }
 
 
@@ -593,20 +607,16 @@
         margin-bottom: 20px;
         box-shadow: 1px 1px 5px 0px rgba(8, 8, 8, 0.27);
         b{
-         background-color: #0090d9;
-            color: #fff;
-            padding: 8px;
-            font-size: 0.95em;
-            font-weight: 400;
-            text-shadow: 0px 1px 2px #000;
+          background-color: #0090d9;
+          color: #fff;
+          padding: 8px;
+          font-size: 0.95em;
+          font-weight: 400;
+          text-shadow: 0px 1px 2px #000;
         }
       }
     }
   }
-
-
-
-
 
 
 
